Aspecto tabla con enlaces

--- a/src/app/componentes/clientes-listado/clientes-listado.component.html
+++ b/src/app/componentes/clientes-listado/clientes-listado.component.html
@@ -1,12 +1,18 @@
 <table>
   <thead>
     <tr>
-      <th>Id</th><th>Nombre</th><th>NIF</th>
+      <th>Id</th><th>Nombre</th><th>NIF</th><th><a href="#">Añadir</a></th>
     </tr>
   </thead>
   <tbody>
     <tr *ngFor="let cliente of clientes">
-      <th>{{cliente.id}}</th><td>{{cliente.nombre}}</td><td>{{cliente.nif}}</td>
+      <th>{{cliente.id}}</th>
+      <td>{{cliente.nombre}}</td>
+      <td>{{cliente.nif}}</td>
+      <td>
+        <a href="#">Editar</a>&nbsp;
+        <a href="#">Borrar</a>
+      </td>
     </tr>
   </tbody>
 </table>
