--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,17 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
 }
+
+a {
+    text-decoration: none;
+    color: darkblue;
+    font-weight: bold;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+th, td {
+    padding: 5px;
+}
