Rutado de listado en funcionamiento

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,10 @@
   </h1>
 </div>
 
-<app-clientes-listado></app-clientes-listado>
+<nav>
+  <ul>
+    <li><a routerLink="clientes/listado">Listado Clientes</a></li>
+  </ul>
+</nav>
 
 <router-outlet></router-outlet>
