--- a/src/app/componentes/clientes-listado/clientes-listado.component.html
+++ b/src/app/componentes/clientes-listado/clientes-listado.component.html
@@ -11,7 +11,7 @@
       <td>{{cliente.nif}}</td>
       <td>
         <a href="#">Editar</a>&nbsp;
-        <a href="#">Borrar</a>
+        <a (click)="borrar(cliente.id)">Borrar</a>
       </td>
     </tr>
   </tbody>
