Rutado hacia clientes detalles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
 
 <nav>
   <ul>
-    <li><a routerLink="clientes/listado">Listado Clientes</a></li>
+    <li><a routerLink="/clientes/listado">Listado Clientes</a></li>
   </ul>
 </nav>
 
