--- a/src/app/componentes/clientes-detalles/clientes-detalles.component.html
+++ b/src/app/componentes/clientes-detalles/clientes-detalles.component.html
@@ -1,3 +1,18 @@
-<p>
-  clientes-detalles works!
-</p>
+<form>
+  <div>
+    <label for="id">Id</label>
+    <input type="number" id="id" />
+  </div>
+  <div>
+    <label for="nombre">Nombre</label>
+    <input type="text" id="nombre" />
+  </div>
+  <div>
+    <label for="nif">NIF</label>
+    <input type="text" id="nif" />
+  </div>
+  <div>
+    <label>&nbsp;</label>
+    <button>Aceptar</button>
+  </div>
+</form>
