Paso de datos por método en click

--- a/src/app/componentes/clientes-detalles/clientes-detalles.component.html
+++ b/src/app/componentes/clientes-detalles/clientes-detalles.component.html
@@ -1,18 +1,18 @@
 <form>
   <div>
     <label for="id">Id</label>
-    <input type="number" id="id" />
+    <input #id type="number" id="id" />
   </div>
   <div>
     <label for="nombre">Nombre</label>
-    <input type="text" id="nombre" />
+    <input #nombre type="text" id="nombre" />
   </div>
   <div>
     <label for="nif">NIF</label>
-    <input type="text" id="nif" />
+    <input #nif type="text" id="nif" />
   </div>
   <div>
     <label>&nbsp;</label>
-    <button>Aceptar</button>
+    <button (click)="guardar(+id.value, nombre.value, nif.value)">Aceptar</button>
   </div>
 </form>
