--- a/src/app/componentes/clientes-detalles/clientes-detalles.component.html
+++ b/src/app/componentes/clientes-detalles/clientes-detalles.component.html
@@ -1,4 +1,4 @@
-<form>
+<div>
   <div>
     <label for="id">Id</label>
     <input #id type="number" id="id" />
@@ -15,4 +15,4 @@
     <label>&nbsp;</label>
     <button (click)="guardar(+id.value, nombre.value, nif.value)">Aceptar</button>
   </div>
-</form>
+</div>
