Visualización en detalles de cliente

--- a/src/app/componentes/clientes-detalles/clientes-detalles.component.html
+++ b/src/app/componentes/clientes-detalles/clientes-detalles.component.html
@@ -1,15 +1,15 @@
 <div>
   <div>
     <label for="id">Id</label>
-    <input #id type="number" id="id" />
+    <input #id type="number" id="id" value="{{cliente.id}}" />
   </div>
   <div>
     <label for="nombre">Nombre</label>
-    <input #nombre type="text" id="nombre" />
+    <input #nombre type="text" id="nombre" value="{{cliente.nombre}}" />
   </div>
   <div>
     <label for="nif">NIF</label>
-    <input #nif type="text" id="nif" />
+    <input #nif type="text" id="nif" value="{{cliente.nif}}" />
   </div>
   <div>
     <label>&nbsp;</label>
