Input type hidden para ID

--- a/src/app/componentes/clientes-detalles/clientes-detalles.component.html
+++ b/src/app/componentes/clientes-detalles/clientes-detalles.component.html
@@ -1,8 +1,5 @@
+<input #id type="hidden" id="id" value="{{cliente.id}}" />
 <div>
-  <div>
-    <label for="id">Id</label>
-    <input #id type="number" id="id" value="{{cliente.id}}" />
-  </div>
   <div>
     <label for="nombre">Nombre</label>
     <input #nombre type="text" id="nombre" value="{{cliente.nombre}}" />
