Visualización de componente de mensajes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,8 @@
   </h1>
 </div>
 
+<app-mensajes></app-mensajes>
+
 <nav>
   <ul>
     <li><a routerLink="/clientes/listado">Listado Clientes</a></li>
