Array de mensajes en el componente y limpiar

--- a/src/app/componentes/mensajes/mensajes.component.css
+++ b/src/app/componentes/mensajes/mensajes.component.css
@@ -1,6 +1,10 @@
-p {
+ul {
     background-color: lightblue;
     font-weight: bold;
     border: 1px solid darkgray;
     padding: 1em;
+}
+
+li {
+    list-style: none;
 }
